# intelligence-toolkit

./: .dockerignore  .env.sh  .gitattributes  .gitignore  .vsts-ci.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYING.md  DEVELOPING.md  Dockerfile  OPENAI.md  PIP.md  README.md  SUPPORT.md  codepipeline.yaml  installer.cfg  installer.nsi  installer_script.ps1  local_embed.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_exe.py  test_fns.ipynb
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.github/workflows/: ci-ghcr.yml  ci.yml  python-publish.yml
.streamlit/: config.toml
app/: AI_API.py  Home.py  TransparencyFAQ.md  home.py  my_session_variables.py
app/.streamlit/: config.toml
app/AI/: __init__.py  cache_pickle.py  classes.py  client.py  defaults.py  embedder.py  metaprompts.py  openai_configuration.py  text_splitter.py  types.py  utils.py  validation_prompt.py
app/attribute_patterns/: SparseGraphEncoder.py  embedding.py  functions.py  model.py  prompts.py
app/components/: app_auth.py  app_loader.py  app_mode.py  app_openai.py  app_terminator.py  app_user.py  cognito_auth.py
app/extraction_schema/: story_outline_schema.json
app/functions/: question_answering_functions.py  story_generation_functions.py
app/javascript/: scripts.py  styles.py
app/pages/: 1 Anonymize_Case_Data.py  1-Generate_Record_Data.py  3-Detect_Case_Patterns.py  4 Match_Entity_Records.py  4-Compare_Case_Groups.py  5 Detect_Entity_Networks.py  5-Match_Entity_Records.py  7 Extract_Record_Data.py  7-Query_Text_Data.py  8 Generate_Mock_Data.py  9 Story_Generation.py  Attribute_Patterns.py  Build_Data_Schema.py  Data_Narratives.py  Data_Synthesis.py  Generate_Record_Data.py  Group_Narratives.py  Network_Analysis.py  Question_Answering.py  Record_Linking.py  Record_Matching.py  Risk_Networks.py  Settings.py
app/prompts/: story_generation_prompts.py
app/tests/: test_cache_pickle.py  test_text_splitter.py  test_utils.py
app/tutorials/: __init__.py  anonymize_case_data.md  detect_case_patterns.md  generate_record_data.md
app/util/: AI_API.py  Database.py  Embedder.py  Embedder1.py  SecretsHandler.py  SparseGraphEncoder.py  constants.py  df_functions.py  download_pdf.py  embedder.py  enums.py  example_outputs_ui.py  helper_fn.py  mermaid.py  notebook_embedder.ipynb  openai_instance.py  openai_wrapper.py  schema_ui.py  secrets_handler.py  session_variable.py  session_variables.py  ui_components.py  validation_prompt.py  wkhtmltopdf.py
deploy/aws/: 1-infrastructure-parameters.yaml  1-infrastructure.yaml  2-development-parameters.yaml  2-development.yaml  codepipeline.yaml  deploy.yaml  infrastructure.yaml
deploy/azure/: README.md  createApp.bicep  createUiDefinition.json  main.tf  main.tfvars  mainTemplate.json  terraform.sh  variables.tf
example_notebooks/: anonymize_case_data.ipynb  company_grievances_record_matches.csv  compare_case_groups.ipynb  detect_case_patterns.ipynb  detect_entity_networks.ipynb  extract_record_data.ipynb  generate_mock_data.ipynb  match_entity_records.ipynb  query_text_data.ipynb
example_outputs/anonymize_case_data/: example_format.json
example_outputs/compare_case_groups/: example_format.json
example_outputs/detect_case_patterns/: example_format.json
example_outputs/detect_entity_networks/: example_format.json
example_outputs/extract_record_data/: example_format.json
example_outputs/generate_mock_data/: example_format.json
example_outputs/match_entity_records/: example_format.json
example_outputs/query_text_data/: example_format.json
examples/: attribute_patterns.ipynb  batch_embedding.ipynb  compare_case_groups.ipynb  detect_case_patterns.ipynb  match_entity_records.ipynb  query_text_data.ipynb  question_answering.ipynb  record_matching.ipynb  risk_networks_detect.ipynb  risk_networks_entity_attributes.ipynb  risk_networks_identify.ipynb  risk_networks_index_nodes.ipynb  risk_networks_prepare_model.ipynb
examples/detect_entity_networks/: explore.ipynb  identify.ipynb  index_nodes.ipynb  main.ipynb  prepare_model.ipynb
examples/input/: marketing_1.csv
examples/risk_networks/: explore.ipynb  full.ipynb  identify.ipynb  index_nodes.ipynb  main.ipynb  prepare_model.ipynb  risk_networks_explore.ipynb  risk_networks_identify.ipynb  risk_networks_index_nodes.ipynb  risk_networks_prepare_model.ipynb  risk_networks_report.ipynb
intelligence_toolkit/AI/: __init__.py  base_batch_async.py  base_chat.py  base_embedder.py  client.py  defaults.py  local_embedder.py  openai_configuration.py  openai_embedder.py  text_splitter.py  utils.py  vector_store.py
intelligence_toolkit/anonymize_case_data/: __init__.py  api.py  error_report.py  synthesizability_statistics.py  visuals.py
intelligence_toolkit/compare_case_groups/: api.py  build_dataframes.py  prompts.py  temporal_process.py
intelligence_toolkit/detect_case_patterns/: __init__.py  api.py  detection_functions.py  graph_functions.py  model.py  prompts.py  record_counter.py
intelligence_toolkit/detect_entity_networks/: api.py  explore_networks.py  exposure_report.py  identify_networks.py  index_and_infer.py  prepare_model.py  prompts.py
intelligence_toolkit/extract_record_data/: __init__.py  api.py  data_extractor.py  prompts.py
intelligence_toolkit/generate_mock_data/: __init__.py  api.py  data_generator.py  prompts.py  schema_builder.py  text_generator.py
intelligence_toolkit/graph/: graph_fusion_encoder_embedding.py
intelligence_toolkit/helpers/: classes.py  constants.py  decorators.py  df_functions.py  document_processor.py  progress_batch_callback.py
intelligence_toolkit/match_entity_records/: __init__.py  api.py  detect.py  prepare_model.py  prompts.py
intelligence_toolkit/query_text_data/: __init__.py  answer_builder.py  answer_schema.py  api.py  classes.py  commentary.py  graph_builder.py  helper_functions.py  input_processor.py  pattern_detector.py  prompts.py  query_rewriter.py  relevance_assessor.py
python/AI/: base_embedder.py  cache_pickle.py  classes.py  client.py  defaults.py  embedder.py  (+8 more)
wheels/: python_louvain-0.16-py3-none-any.whl
(+430 files in other folders)
